<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/video_pilihan_editor">
        <menu>
            <item
                android:id="@+id/nusa_dan_rara"
                android:icon="@drawable/ic_favorite_border_black"
                android:title="@string/nusa_dan_rara" />
            <item
                android:id="@+id/omar_dan_hana"
                android:icon="@drawable/ic_favorite_border_black"
                android:title="@string/omar_dan_hana" />
        </menu>
    </item>

    <item android:title="@string/video_lainnya">
        <menu>
            <item
                android:id="@+id/video1"
                android:icon="@drawable/ic_video_library_black"
                android:title="@string/videos" />
            <item
                android:id="@+id/video2"
                android:icon="@drawable/ic_video_library_black"
                android:title="@string/videos" />
        </menu>
    </item>

</menu>
